--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ a {
     text-decoration: none;
 }
 
-.heading {
+.header__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,34 +29,22 @@ a {
     font-weight: 500;
 }
 
-.heading__logo,
-nav {
+.header__nav div {
     display: flex;
     align-items: center;
-}
-
-.heading__nav,
-.heading__nav__btns{
     gap: 2em;
 }
 
-.heading__nav {
+.header__nav--menu {
     margin-left: 7em;
     margin-right: auto;
 }
 
-.logo__name{
-    margin-left: 0.5em;
-    color: var(--logo-color);
-    font-size: 1.1rem;
-}
-
-.nav__link,
-.heading__nav__btns :first-child {
+.nav__link {
     color: var(--primary-color);
 }
 
-.nav__btn:nth-child(2) {
+.nav__btn {
     color: var(--color-white);
     background-color: var(--terciary-color);
     border-radius: 0.5em;
