--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ html {
 body {
     font-size: 1rem;
     font-family: var(--main-font);
+    color: var(--primary-color);
 }
 
 a {
@@ -64,6 +65,7 @@ a {
     font-size: 3rem;
     font-weight: 600;
     margin: 1.5rem 0;
+    color: var(--secondary-color);
 }
 .about__paragraph {
     color: var(--primary-color);
@@ -93,7 +95,34 @@ a {
     font-size: 1.1rem;
     font-weight: 500;
     margin: 0.7em 0 0.5em 0;
+    color: var(--secondary-color);
 }
 .metrics__text {
     color: var(--primary-color)
+}
+
+/*Careers*/
+.careers {
+    text-align: center;
+    padding: 6rem 0;    
+}
+.careers__hiring {
+    display: inline-block;
+    background-color: #8E24240D;
+    border-radius: 16px;
+    padding: 0.3em 0.8rem;
+    color: var(--terciary-color);
+    margin-bottom: 1rem;
+}
+
+.careers__title {
+    font-size: 2.2rem;
+    font-weight: 600;
+    margin-bottom: 1.2rem;
+    color: var(--secondary-color);
+}
+
+.careers__text {
+    font-size: 1.3rem;
+    margin-bottom: 4rem;
 }
