--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,7 +171,7 @@ a {
     background-color: #C3191908;
     padding: 4rem;
     text-align: center;
-    margin: 0 7rem;
+    margin: 0 7rem 6rem 7rem;
 }
 
 .testimonials__text {
@@ -205,7 +205,7 @@ a {
 /*contact*/
 
 .contact {
-    padding: 19rem 6rem;
+    padding: 6rem 0;
     text-align: center;
 }
 
